<resources>

    <string name="app_name">金银猫</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载。。。</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="empty"></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="by">由</string>
    <string name="cash">无条件兑付</string>
    <string name="percent">%</string>
    <string name="year_yield">年化收益</string>
    <string name="fix_yield">固定收益</string>
    <string name="start_point">元起投</string>
    <string name="day">天</string>
    <string name="make_money">我要赚钱</string>
    <string name="my_cat">我的喵喵</string>
    <string name="amp">银企众盈</string>
    <string name="cpl">商票贷</string>
    <string name="order_list">订单列表</string>
    <string name="fund_account">资金账户</string>
    <string name="user_feedback">用户反馈</string>
    <string name="about_jym">关于金银猫</string>
    <string name="my_bankcard">我的银行卡</string>
    <string name="setting">设置</string>
    <string name="security_setting">安全设置</string>
    <string name="encourage">喵喵求鼓励</string>
    <string name="pay_mode">金银猫手机支付与易联支付合作开通。</string>
    <string name="know_more">了解更多</string>
    <string name="add_new_card">添加新银行卡</string>
    <string name="user">用户：</string>
    <string name="user_name">用户名</string>
    <string name="no_real_01">对不起，您还不是实名认证用户</string>
    <string name="no_real_02">认证并绑定银行卡后即可进行购买！</string>
    <string name="once_bind">马上绑定</string>
    <string name="wait_verify_01">您的银行卡正在认证中，</string>
    <string name="wait_verify_02">请耐心等待结果！</string>
    <string name="no_buy">您还没做任何投资，\n赶快去看看我们的产品吧！</string>
    <string name="look_list">查看产品列表</string>
    <string name="real_verify">实名认证</string>
    <string name="phone_num">手机号码</string>
    <string name="phone_number">手机号码:</string>
    <string name="id_card">身份证</string>
    <string name="id_card_ext">身份证:</string>
    <string name="expect_income">预期收益</string>
    <string name="input_fund">在投资金：%1$d元</string>
    <string name="obtain_income">已获收益：%1$d元</string>
    <string name="yuan">元</string>
    <string name="set_pay_pwd">设置支付密码</string>
    <string name="deduct_alert">提交认证后，易联会从您的银行卡中扣除1~5元的随机金额，此笔扣款会在认证完成后归还于原银行。</string>
    <string name="pay_pwd_rule">8~18位字符、数字或字母，区分大小写</string>
    <string name="input_pay_pwd">输入支付密码</string>
    <string name="confirm_pay_pwd">确认支付密码</string>
    <string name="look">查看</string>
    <string name="sign_protocol">《认证签约协议》</string>
    <string name="agree_and_commit">同意协议并提交</string>
    <string name="identity_info">身份信息</string>
    <string name="name">姓名</string>
    <string name="name_ext">姓名:</string>
    <string name="input_name">请填写姓名</string>
    <string name="id_card_type">证件类型</string>
    <string name="passport">护照</string>
    <string name="military_card">军人证</string>
    <string name="id_card_num">证件号码</string>
    <string name="input_id_card">请填写证件号码</string>
    <string name="next">下一步</string>
    <string name="bind_card">绑定银行卡</string>
    <string name="card_num">卡号</string>
    <string name="input_card">请输入借记卡卡号</string>
    <string name="opening_bank">开户银行</string>
    <string name="veriry_wait">认证请求受理中</string>
    <string name="call_verify">请接听来电 并确认密码</string>
    <string name="verify_wait_01">这是确认您是卡主的必要安全措施</string>
    <string name="verify_wait_02">若10分钟未接到来电即表示认证失败</string>
    <string name="verify_wait_03">请在语音提示结束后再输入密码</string>
    <string name="verify_wait_04">认证所扣费用成功后会归还至原卡</string>
    <string name="look_and_wait">边逛边等</string>
    <string name="question_consult">如有问题请垂询：</string>
    <string name="jym_phone">4008&#8211;556&#8211;333</string>
    <string name="password">密码</string>
    <string name="logout">登出</string>
    <string name="login_alert">更多功能只在一 “登” 之遥!</string>

</resources>