<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="45dp" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="91dp"
        android:layout_height="73dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/no_real_icon"
        android:contentDescription="@string/empty" />

    <TextView
        android:id="@+id/phone_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/user"
        android:textColor="@color/text_essential"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_num_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="@string/no_real_01"
        android:textColor="@color/secondary_text"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/no_real_02"
        android:textColor="@color/secondary_text"
        android:textSize="15sp" />

    <include
        android:id="@+id/bottom"
        layout="@layout/pay_bottom" />

    <Button
        android:id="@+id/once_bind_btn"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_above="@id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/yellow_big_corner"
        android:text="@string/once_bind"
        android:textColor="@color/default_white"
        android:textSize="20sp" />

</RelativeLayout>