<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:paddingTop="45dp" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="91dp"
        android:layout_height="73dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/wait_icon"
        android:contentDescription="@string/empty" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/user"
        android:textColor="@color/text_essential"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="@string/wait_verify_01"
        android:textColor="@color/secondary_text"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/wait_verify_02"
        android:textColor="@color/secondary_text"
        android:textSize="15sp" />

    <include layout="@layout/pay_bottom" />

</RelativeLayout>