<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:background="@color/default_white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/pay_pwd_rule"
            android:textColor="@color/text_secondary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/pay_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/input_pay_pwd"
            android:inputType="textPassword"
            android:textColor="@color/text_essential"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="3dp"
            android:background="@color/line_gray" />

        <EditText
            android:id="@+id/confirm_pay_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/confirm_pay_pwd"
            android:inputType="textPassword"
            android:textColor="@color/text_essential"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="3dp"
            android:background="@color/line_gray" />

        <Button
            android:id="@+id/commit_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/yellow_main_btn"
            android:text="@string/agree_and_commit"
            android:textColor="@color/default_white"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look"
                android:textColor="@color/text_secondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sign_protocol_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/sign_protocol"
                android:textColor="@color/yellow_link"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mid" >

        <include
            android:id="@+id/bottom"
            layout="@layout/pay_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom"
            android:padding="15dp"
            android:text="@string/deduct_alert"
            android:textColor="@color/secondary_text"
            android:textSize="13sp" />
    </RelativeLayout>

</RelativeLayout>