<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        layout="@layout/title_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/phone"
            android:layout_width="113dp"
            android:layout_height="97dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/phone_icon"
            android:contentDescription="@string/empty" />

        <ImageView
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginLeft="-24dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/phone"
            android:background="@drawable/phone_num_icon"
            android:contentDescription="@string/empty" />

        <TextView
            android:id="@+id/call_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/call_verify"
            android:textColor="@color/text_essential"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/call_verify"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:background="@drawable/yellow_circle"
                android:contentDescription="@string/empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:text="@string/verify_wait_01"
                android:textColor="@color/text_secondary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/ll1"
            android:layout_below="@id/ll1"
            android:layout_marginBottom="3dp"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:background="@drawable/yellow_circle"
                android:contentDescription="@string/empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:text="@string/verify_wait_02"
                android:textColor="@color/text_secondary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/ll1"
            android:layout_below="@id/ll2"
            android:layout_marginBottom="3dp"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:background="@drawable/yellow_circle"
                android:contentDescription="@string/empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:text="@string/verify_wait_03"
                android:textColor="@color/text_secondary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/ll1"
            android:layout_below="@id/ll3"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:background="@drawable/yellow_circle"
                android:contentDescription="@string/empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:text="@string/verify_wait_04"
                android:textColor="@color/text_secondary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_consult"
                android:textColor="@color/secondary_text"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/jym_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:singleLine="true"
                android:text="@string/jym_phone"
                android:textColor="@color/yellow_link"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/look_and_wait_btn"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_above="@id/bottom"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/yellow_big_corner_btn"
            android:text="@string/look_and_wait"
            android:textColor="@color/default_white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>